feat: Redis에 사용자 접속 서버, 활성 시간 정보 추가 및 Key 구조 변경